# shmup

./: CMakeLists.txt  LICENSE  README.md  README_ru
include/: draw.h  game.h  meshes.h  shaders.h  sounds.h  stack.h  targa.h  textures.h  utils.h  wave.h  wavefront.h
include/GL/: ati_meminfo.h  ext_texture_compression_s3tc.h  ext_texture_filter_anisotropic.h  ext_texture_srgb.h
include/al/: xram.h
include/gl3/: wglextensions.h
include/native/: config.h  filesystem.h  native.h  sockets.h  thread.h  time.h  win32keys.h  window.h  x11keys.h
include/resources/: about_game.h  bonus1_model.h  bonus2_model.h  bonus3_model.h  coin.h  developer.h  exit_game.h  explosion1.h  explosion2.h  explosion3.h  game_over.h  gradient1.h  new_game.h  numbers.h  player_ship_model.h  resources.h  return_game.h  return_mainmenu.h  score.h  select.h  settings.h  ship1_model.h  ship2_model.h  ship3_model.h  ship4_model.h  ship5_model.h  shmup.h  shot1.h  shot2.h  shot3.h  sound_off.h  sound_on.h  thanks.h  version.h  warp.h
resources/: about_game.tga  developer.tga  exit_game.tga  game_over.tga  gradient1.tga  new_game.tga  noise1.tga  numbers.tga  return_game.tga  return_mainmenu.tga  score.tga  settings.tga  shmup.tga  sound_off.tga  sound_on.tga  thanks.tga  version.tga
src/: draw.c  game.c  meshes.c  shaders.c  sounds.c  stack.c  targa.c  textures.c  utils.c
